--- a/assignment.html
+++ b/assignment.html
@@ -1,1 +1,22 @@
-Hello, world!
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Watson Assignement</title>
+	<link rel="stylesheet" href="SenJamesAssign.css">
+</head>
+<body>
+	
+	<header>This is the Assignment of Sections</header>
+	
+	<section class="designed">
+
+
+		<h1>Section 1</h1>
+		<p>I have gone ahead to create my own section, you may choose to design or follow yours.</p>
+		<p>No Bootstrap on mine...Just pure CSS</p>
+		<p>By James</p>
+	</section>
+	
+	
+</body>
+</html>
