--- a/Desktop/watson_assignment-master/watson_assignment-master/assignment.html
+++ b/Desktop/watson_assignment-master/watson_assignment-master/assignment.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Watson Assignment (bosslady changes)</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<title></title>
 </head>
-<body>
+<body style="background-color:  #800000 ;">
+	<div class="container" style="background-color: white; height:700px;">
+
 	<h2>Hello, world!</h2>
-		<h3>Welcome to the Watson group of programmers.</h3>
+		<h3>Myke Just Dey Test Hand here</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. <br> Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<section style="background-color: grey; height: 50px;">
+			<section style="background-color: grey; ">
 				This section was added by Mykel
 				
 			</section>
+			<div class="row">
+				<div class="col-md-4">
+					<img src="https://i.ibb.co/PZ5hq0F/valbanner.png" class="img-fluid" />
+				</div>
+				<div class="col-md-4">
+					<img src="https://i.ibb.co/0t8DntJ/jacket.jpg" class="img-fluid" />
+				</div>
+				<div class="col-md-4">
+					<img src="https://i.ibb.co/fdKJ5RY/pant.jpg" class="img-fluid"/>
+				</div>
+				
+			</div>
+
+
+
+</div>
+
+			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
