Mykel added some images and bootstrap

--- a/Desktop/watson_assignment-master/watson_assignment-master/assignment.html
+++ b/Desktop/watson_assignment-master/watson_assignment-master/assignment.html
@@ -5,27 +5,20 @@
 	<title></title>
 </head>
 <body style="background-color:  #800000 ;">
-	<div class="container" style="background-color: white; height:700px;">
+	<div class="container" style="background-color: white; ">
 
-	<h2>Hello, world!</h2>
-		<h3>Myke Just Dey Test Hand here</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. <br> Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<section style="background-color: grey; ">
-				This section was added by Mykel
-				
-			</section>
+
+		<h3>Myke Just Dey Test Hand Here</h3>
+
+
 			<div class="row">
-				<div class="col-md-4">
-					<img src="https://i.ibb.co/PZ5hq0F/valbanner.png" class="img-fluid" />
-				</div>
 				<div class="col-md-4">
 					<img src="https://i.ibb.co/0t8DntJ/jacket.jpg" class="img-fluid" />
 				</div>
+				<div class="col-md-4">
+					<img src="https://i.ibb.co/TTF7ZVc/men.jpg" class="img-fluid" />
+				</div>
+
 				<div class="col-md-4">
 					<img src="https://i.ibb.co/fdKJ5RY/pant.jpg" class="img-fluid"/>
 				</div>
